font problem fixed on safari - issue was the firefox focus content blocker - troubleshooting layout issues

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -77,6 +77,4 @@
     justify-content: space-evenly;
     max-width: 30rem;
   }
-  .cheat-sheet-svg {
-  }
 }
